# sdm

./: .gitattributes  README.md
doc/: changelog.txt  (+1 more)
src/: CMakeLists.txt
src/cmake/: DetectCPU.c  DiagnosticMode.cmake  DisableWarningsFor3rdPartyCode.cmake  GlobalBuildConfig.cmake  InstallDirectories.cmake  SetUpRpath.cmake  Version.cmake
src/cmake/dlldeptool/: CMakeLists.txt  RunDepTool.cmake.in  dlldeptool.h  main.cpp  peimports.cpp  peimports.h  winpath.cpp  winpath.h
src/cmake/installer/: CMakeLists.txt  addtopath.lua  make_installer.nsi.in  uninstall.sh.in
src/cmake/package/: CMakeLists.txt  sdm-config.cmake.in
src/cmake/workarounds/: timed_mutex_workaround.h
src/config/: CMakeLists.txt  GitCommitHash.cmake.in  sdmconfig.cpp  sdmconfig.h  sdmdirscfg.h.in  sdmvercfg.h.in  version.tex.in
src/doc/: CMakeLists.txt  release_process.txt
src/doc/manual/: localstyle.tex  manual.tex  version.tex
src/gui/: CMakeLists.txt
src/gui/commonwidgets/: CMakeLists.txt  autoresizingtable.cpp  autoresizingtable.h  codeeditor.cpp  codeeditor.h  consolewidget.cpp  consolewidget.h  dockwrapper.cpp  dockwrapper.h  filedialogex.cpp  filedialogex.h  fileselector.cpp  fileselector.h  fontutils.cpp  fontutils.h  formatnumber.h  formdialog.cpp  formdialog.h  fruntime_error.h  fstring.h  hintedwidget.h  iconbutton.cpp  iconbutton.h  luahighlighter.cpp  luahighlighter.h  marshal.h  optionselectordialog.cpp  optionselectordialog.h  plotterabstractscene.cpp  plotterabstractscene.h  plotteraddcursordialog.cpp  plotteraddcursordialog.h  plotterbarscene.cpp  plotterbarscene.h  plotterbinaryscene.cpp  plotterbinaryscene.h  plotterbitmapscene.cpp  plotterbitmapscene.h  plottercursorwidget.cpp  plottercursorwidget.h  (+14 more)
src/gui/commonwidgets/resources/: commonwidgets.qrc
src/gui/commonwidgets/translations/: CMakeLists.txt  commonwidgets_ru.ts
src/gui/sdmconsole/: CMakeLists.txt  appwidelock.cpp  appwidelock.h  cmdargs.cpp  cmdargs.h  docpanels.cpp  docpanels.h  docroot.cpp  docroot.h  extrakeywords.cpp  extrakeywords.h  hints.cpp  hints.h  luadialogserver.cpp  luadialogserver.h  luaformdialog.cpp  luaformdialog.h  luagui.cpp  luagui.h  luamodelessdialog.h  luaplotterwidget.cpp  luaplotterwidget.h  luaserverqt.cpp  luaserverqt.h  luatextviewer.cpp  luatextviewer.h  luawidget.cpp  luawidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mhdbwriter.cpp  mhdbwriter.h  openplugindialog.cpp  openplugindialog.h  propertyeditor.cpp  propertyeditor.h  registerconfigdialog.cpp  registerconfigdialog.h  registermapengine.cpp  (+20 more)
src/gui/sdmconsole/freedesktop/: sdmconsole.desktop  sdmconsole.desktop.in
src/gui/sdmconsole/resources/: sdmconsole.qrc
src/gui/sdmconsole/scripts/: CMakeLists.txt  bin_viewer.lua  mhdb_viewer.lua  plot_graph.lua  scripts.lst  signal_analyzer.lua
src/gui/sdmconsole/translations/: CMakeLists.txt  sdmconsole_ru.ts
src/gui/sdmconsole/win32/: sdmconsole.rc
src/luabridge/: CMakeLists.txt
src/luabridge/include/: luabridge.h  luatextcodec.h  treeitem.h
src/luabridge/src/: luabridge.cpp  luatextcodec.cpp
src/luamodules/: CMakeLists.txt
src/luamodules/luadfic/: CMakeLists.txt  arraybuffer.h  compoundtype.cpp  compoundtype.h  luadfic.cpp  luadfic.h
src/luamodules/luadfic/dfic/: CMakeLists.txt  dfic.cpp  dfic.h
src/luamodules/luaipsockets/: CMakeLists.txt  luaipsockets.cpp  luaipsockets.h
src/luamodules/luart/: CMakeLists.txt  luart.cpp  luart.h
src/luamodules/native/: CMakeLists.txt  i18n.lua
src/luaserver/: CMakeLists.txt
src/luaserver/include/: luacallbackobject.h  luaconsole.h  luaiterator.h  luaserver.h  luastreamreader.h  luavalue.h
src/luaserver/src/: luacallbackobject.cpp  luaconsole.cpp  luaiterator.cpp  luaserver.cpp  luastreamreader.cpp  luavalue.cpp  stackguard.cpp
src/sdk/: CMakeLists.txt
src/sdk/api/: CMakeLists.txt
src/sdk/api/include/: sdmapi.h  sdmtypes.h
src/sdk/examples/: CMakeLists.txt  readme.txt
src/sdk/examples/dcl/: CMakeLists.txt  CMakeLists.txt.install  dcl.cpp  dcl.h  readme.txt
src/sdk/examples/grmon/: CMakeLists.txt  CMakeLists.txt.install  grmon.cpp  grmon.h  readme.txt
src/sdk/examples/simpleplugin/: CMakeLists.txt  CMakeLists.txt.install  simpleplugin.c
src/sdk/examples/testplugin/: CMakeLists.txt  CMakeLists.txt.install  testplugin.cpp  testplugin.h  videoframe.cpp  videoframe.h
src/sdk/examples/uartdemo/: CMakeLists.txt  CMakeLists.txt.install  readme.txt  uartdemo.cpp  uartdemo.h  uartdemo.ino
src/sdk/ipsockets/: CMakeLists.txt
src/sdk/ipsockets/include/: ipsocket.h
src/sdk/ipsockets/src/: ipsocket.cpp
src/sdk/lib/: CMakeLists.txt
src/sdk/lib/ipsockets/: CMakeLists.txt
src/sdk/lib/pluginprovider/: CMakeLists.txt
src/sdk/lib/uart/: CMakeLists.txt
src/sdk/pluginprovider/include/: sdmprovider.h
src/sdk/pluginprovider/src/: sdmproperty.cpp  sdmprovider.cpp
src/sdk/uart/include/: uart.h
src/sdk/uart/src/: uart.cpp
src/sdmhost/: CMakeLists.txt  main.cpp  textconsole.cpp  textconsole.h
src/sdmplug/: CMakeLists.txt
src/sdmplug/include/: sdmplug.h
src/sdmplug/src/: sdmchannel.cpp  sdmdevice.cpp  sdmplugbase.cpp  sdmplugin.cpp  sdmsource.cpp
src/tests/checkbuild/: checkbuild.lua
src/tests/functional/: CMakeLists.txt
src/tests/functional/common/: testcommon.cpp  testcommon.h  testcommon.lua
src/tests/functional/test001/: CMakeLists.txt  readme.txt  runtest.lua.in
src/tests/functional/test002/: CMakeLists.txt  readme.txt  runtest.lua.in  testmain.cpp
src/tests/functional/test003/: CMakeLists.txt  readme.txt  runtest.lua.in  testmain.cpp
src/tests/functional/test004/: CMakeLists.txt  readme.txt  runtest.lua.in  test_toclose.lua  testmain.cpp
src/u8e/: CMakeLists.txt  readme.txt
src/u8e/include/: u8ecodec.h  u8eenv.h  u8efile.h  u8eio.h
src/u8e/src/: u8eenv.cpp  u8efile.cpp
src/u8e/tests/: CMakeLists.txt
src/utils/: CMakeLists.txt
src/utils/include/: abstractconsole.h  csvparser.h  dirutil.h  ioredirector.h  loadablemodule.h  pointerwatcher.h  safeflags.h  stringutils.h
src/utils/src/: csvparser.cpp  dirutil.cpp  ioredirector.cpp  loadablemodule.cpp  stringutils.cpp
(+95 files in other folders)
